Complete model gradient foundations and compiler autograd coverage